fixed background image bleeding issue onto teams stats page removed thin divider lines in nhl player stats table

--- a/src/components/browse_teams/browse.scss
+++ b/src/components/browse_teams/browse.scss
@@ -23,10 +23,6 @@ img {
     max-height: 100%;
 }
 
-#browse {
-    width: 95%;
-}
-
 .team-container {
     display: flex;
     justify-content: center;
