--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -20,7 +20,7 @@ $navHeaderFont: 'Passion One', sans-serif;
         margin: 0;
         font-size: 2.3rem;
         font-weight: 700;
-        color: #292A3D;
+        color: white;
         letter-spacing: 2px;
         font-family: $navHeaderFont;
 
