--- a/src/components/nba_stats/players_stats/nba_players_stats.scss
+++ b/src/components/nba_stats/players_stats/nba_players_stats.scss
@@ -9,13 +9,13 @@ $break-med: 600px;
 }
 
 #stats-container {
-    margin-bottom: 36px;
+    // margin-bottom: 36px;
     width: 100%;
     height: 80%;
     background-color: #182027;
 
     @media screen and (min-width: $break-med){
-        margin-bottom: 11px;
+        // margin-bottom: 11px;
     }
 
     @include desktop {
@@ -36,10 +36,8 @@ $break-med: 600px;
                 @media screen and (min-width: 860px) {
                     height: 58vh;
                 }
-            
         }
         
-    
         #stats-title {
             font-size: 1em;
             margin-top: 0px;
